# image-text

./: .env  .env.example  .gitignore  README.md  ReadMe.md  doc.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  storage.json  test.html  vite.config.js
chrome_script/: background.js  manifest.json
cover-design/: package-lock.json  vite.config.ts
cover-design/src/api/editor/: materials.ts
cover-design/src/assets/data/: templateData copy.json  templateData.json
cover-design/src/mock/: editor.ts
cover-design/src/views/Editor/layouts/header/right/: saveOper.vue
cover-design/src/views/Editor/layouts/panel/leftPanel/wrap/: CompCateListWrap.vue  CompList2Wrap.vue  TempListWrap.vue
cover-generate/src/: App.vue
main-script/: README.md  package-lock.json  package.json  vite.config.js
main-script/src/: App copy.vue  App.vue  auto-imports.d.ts  components.d.ts  main.js
main-script/src/utils/: title.js  utils.js
python/: check_char_right.py  copy_markdown.py  cover.py  gunicorn_config.py  index.py  my_keyboard.py  my_tools.py  pyproject.toml  start.ps1  storage.json  templateData.json  test.py  title.json
python/cover-generate/: .env  package-lock.json  package.json
python/cover-generate/src/: App.vue
src/: App.vue  components.d.ts  main.js
src/utils/: utils.js
xhs-download/: package-lock.json  package.json  vite.config.js
xhs-download/src/: App.vue  components.d.ts  index.css
