[tool.poetry]
name = "python-tasks"
version = "0.1.0"
description = ""
authors = ["easylee <2452241217@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
playwright = "^1.48.0"
aiohttp = "^3.11.6"
screeninfo = "^0.8.1"
paddlepaddle = "^2.6.2"
paddleocr = "^2.9.1"
flask = {extras = ["async"], version = "^3.1.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
