[tool.poetry]
name = "python-tasks"
version = "0.1.0"
description = ""
authors = ["easylee <2452241217@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
playwright = "^1.48.0"
aiohttp = "^3.11.6"
screeninfo = "^0.8.1"
paddlepaddle = "^2.6.2"
paddleocr = "^2.9.1"
flask = {extras = ["async"], version = "^3.1.0"}
pyautogui = "^0.9.54"
pynput = "^1.7.7"
send2trash = "^1.8.3"
pyperclip = "^1.9.0"
markdown = "^3.7"
gunicorn = "^23.0.0"
waitress = "^3.0.2"
setuptools = "^75.6.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
